hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hello-ingress
 annotations:
   kubernetes.io/ingress.class: kong
spec:
 rules:
 - http:
     paths:
     - path: /v1/tasks/task
       pathType: Prefix
       backend:
         service:
           name: producer-rabbitmq           
           port:
             number: 80
     - path: /v1/hello
       pathType: Prefix
       backend:
         service:
           name: myappone-service
           port:
             number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: producer-rabbitmq
  annotations:
   konghq.com/plugins: five-per-min
spec:
  type: NodePort
  selector:
    app: producer-rabbitmq
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 31500
---
apiVersion: v1
kind: Service
metadata:
  name: myappone-service
  annotations:
   konghq.com/plugins: five-per-min
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
